2-Traffic-Starting/7-istio-rules-stickiness.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service # "just" a name for this virtualservice, can be any name here
  namespace: default
spec:
  hosts:
    - fleetman-staff-service.default.svc.cluster.local # suggest to use the fully qualify domain name, Service DNS (ie the regular k8)name that we're applying routing rules to
  http:
    - route:
        - destination: # destination can be go to the different host, but here is same 
            host: fleetman-staff-service.default.svc.cluster.local # target DNS name
            subset: staff-service-subset # defined it in the destination rule 
          #weight: 100 not needed if there is only one destination
